# Spacy2NIF

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: doc2nif.ttl  louvre-ticket-price-hike-scli-intl.txt  output_spacy_with_nif.ipynb  processed.conllu  udpipe.ttl
spacy2nif/: exporter.py
